kubernetes/skywalker/cluster/istio/kiali-server.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: kiali-server

spec:
  gateways:
    - cluster/feldman-in
  hosts:
    - kiali.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
